--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
+    "react-select-search": "^4.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
