--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.7.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
+    "@types/tough-cookie": "^4.0.2",
+    "axios": "^1.3.3",
+    "axios-cookiejar-support": "^4.0.6",
     "daisyui": "^2.50.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-select-search": "^4.1.6",
+    "tough-cookie": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
