攻撃側のポケモンがテラスタルすると、ダメージに1.5倍の補正がかかるように修正 #27

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-select-search": "^4.1.6",
+    "react-use": "^17.4.0",
     "tough-cookie": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
