Add:firebaseを利用したGoogleアカウント認証機能を追加  #20

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.3.3",
     "axios-cookiejar-support": "^4.0.6",
     "daisyui": "^2.50.1",
+    "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
