--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-select-search": "^4.1.6",
+    "react-toastify": "^9.1.1",
     "react-use": "^17.4.0",
     "tough-cookie": "^4.1.2",
     "web-vitals": "^2.1.4"
