--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios-cookiejar-support": "^4.0.6",
     "daisyui": "^2.50.1",
     "firebase": "^9.17.1",
+    "json-cyclic": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
