--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/tough-cookie": "^4.0.2",
     "axios": "^1.3.4",
     "axios-cookiejar-support": "^4.0.6",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "daisyui": "^2.50.1",
     "firebase": "^9.17.1",
     "json-cyclic": "^1.0.2",
