--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.1.4",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
